	to getpid() to avoid errors for niced processes. (#86116)

	* gthread/gthread-impl.c, gthread/gthread-posix.c,
	gthread/gthread-solaris.c: Do the same for the posix/dce
	implementation. Solaris still needs to set priority of the main
	thread, because all unbound threads will schedule according to
	that value and it defaults to 0 (the minimal value). 

Thu Jul 25 14:23:15 2002  Owen Taylor  <otaylor@redhat.com>

 	* glib/gfileutils.c: Clarify the behavior of g_build_path()
 	for empty elements and for leading and trailing copies
 	of the separator in the docs.
 
 	* glib/gfileutils.c: Fix problems with leading elements
 	consisting only of "/" characters. (#85928, Guillaume Chazarain)
 
 	* tests/strfunc-test.c (main): Add more test cases
 	for g_build_filename().
 
2002-07-26  Matthias Clasen  <maclas@gmx.de>

	* glib/gunicode.h: 
	* glib/gutf8.c (g_utf8_strreverse): New function to revert
	a utf8 string.
	* glib/gpattern.c (g_utf8_reverse): Gone, replaced by 
	g_utf8_strreverse.  (#87725)

Thu Jul 25 20:57:20 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/giochannel.c (g_io_channel_read_line): Fix 
	docs for @str_return to conform to the main docs
	and the implementation as to whether the terminator
	is included. (#87964, Jacob Berkman)

Thu Jul 25 19:52:41 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/guniprop.c (real_tolower): Handle the 
	end of the string properly when max_len is set.
	(#88545, Morten Welinder.) Rename the next_t
	variable to next_type to make cc-mode happy.

	* glib/gconvert.c (g_iconv_open): Fix missing
	label from previous commit.

Thu Jul 25 19:41:03 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/giochannel.c (g_io_channel_get_flags): Fix 
	incorrect return value in g_return_val_if_fail 
	(#85545, David L. Cooper II)

Thu Jul 25 19:12:43 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/giochannel.c (g_io_channel_set_encoding): Clarify
	that only one of the conditions listed in the docs
	need to be true, not all of them. (#87176,